
    OpenSSL v1.1.* isn't supported yet
    Setting !maxupdn to 0 for upload/download leads to problems -> generating gillions of queued tasks
    Enable try to complete is unstable at the moment. It's recommended to set enable_try_to_complete=0

--=============================( SLFTP v1.5.6 )===================================-
    {+} News System to store important messages to encrypted file. (#173, #164)                                 --- cmd named !news or rename to something else??
    {+} New !affils command.
    {+} !status and !uptime shows if you use 32/64-bit version of slftp.
    {+} !lastlog command to show last log entries. (#160)
    {+} Support for CTCP Requests (might be useful for scripters)
    {+} Masks support for kb_sectionhandlers (TTVRelease, TIMDBRelease, etc) (#147)
    {#} Fixed !routelock so it doesn't remove normal route when removing lock
    {#} precmd can be removed by omiting precommand via !setprecmd (#178)
    {^} Requests can be filled from sites without checking the routes. (#168)
    {^} All irc commands with * as allowed input for sitename should output stuff in alphabetical order. (#163)
    {^} [MKDIR Denied] msg shows path with denied releasename.
    {^} !autoinvite warns you if no IRCNick is specified for the site.
    {^} !maxupperrip can show actual value now.
    {^} !findaffil has improved irc output.
    {^} backup on startup will only be executed after sites.dat has been successfully decrypted. (#169)
    {^} !leechers code improved.
    {^} Support for regex in IMDb Language rule
    {-} TheTVDB support as API goes offline on October 1st, 2017 (#175)
    {-} !sectionins command -> edit slftp.precatcher manually! (#157)

--=============================( SLFTP v1.5.5 )===================================-
  ** NOTE: FROM NOW ON YOU HAVE TO USE THE MAKEFILE ON LINUX AND THE MAKE.BAT ON WINDOWS **

    {+} FastMM4 memory manager (https://github.com/pleriche/FastMM4)