@@ -50,14 +50,15 @@
     Enable try to complete is unstable at the moment. It's recommended to set enable_try_to_complete=0
 
 --=============================( SLFTP v1.5.6 )===================================-
-    {+} News System to store important messages to encrypted file. (#173, #164)                                 --- cmd named !news or rename to something else??
+    {+} News System to store important messages to encrypted file. (#173, #164)
     {+} New !affils command.
     {+} !status and !uptime shows if you use 32/64-bit version of slftp.
     {+} !lastlog command to show last log entries. (#160)
     {+} Support for CTCP Requests (might be useful for scripters)
-    {+} Masks support for kb_sectionhandlers (TTVRelease, TIMDBRelease, etc) (#147)
+    {+} Wildcard/Regex (Masks) support for kb_sectionhandlers (TTVRelease, TIMDBRelease, etc) (#147)
     {#} Fixed !routelock so it doesn't remove normal route when removing lock
     {#} precmd can be removed by omiting precommand via !setprecmd (#178)
+    {#} Remove language tags before searching on TVmaze
     {^} Requests can be filled from sites without checking the routes. (#168)
     {^} All irc commands with * as allowed input for sitename should output stuff in alphabetical order. (#163)
     {^} [MKDIR Denied] msg shows path with denied releasename.
